UI/src/stylesheet.scss
@import "bootstrap";

a {
    color: #0366d6;
}

code {
    color: #E01A76;
}

.btn-primary {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

.media-container.card {
    border: 1px solid rgba(0, 0, 0, 0.0);
    cursor: pointer;
    margin-bottom: 15px;
}

.card.highlighted {
    @extend .shadow-sm;
    border: 1px solid rgba(0, 0, 0, 0.125);
}

.card-title {
    max-height: 1.2em;
    overflow: hidden;
}

.card-body {
    padding: 0.5rem;
    height: 5rem;
}

.card-body p {
    font-size: 1.1rem;
    max-height: 3.5rem;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: normal;
}

.media-container .progress {
    height: 2px;
    border-radius:unset;
}

.container .col {
    padding-left: 7.5px;
    padding-right: 7.5px;
}

.spinner-border {
    display: inline-block;
    width: 2rem;
    height: 2rem;
    vertical-align: text-bottom;
    border: 0.15em solid currentColor;
    border-right-color: transparent;
    border-radius: 50%;
    animation: spinner-border .75s linear infinite;
}

.badge {
    position: absolute;
    bottom: 5.5rem;
    right: 0.4rem;
}

